WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93999
[BlackBerry] Don't crash on OOM in AC
https://bugs.webkit.org/show_bug.cgi?id=93999
Summary
[BlackBerry] Don't crash on OOM in AC
Filip Spacek
Reported
2012-08-14 10:41:44 PDT
When we fail to allocate the bitmap surface for the contents of the AC layer, we should bail and not attempt any rendering.
Attachments
Fail gracefully in case of OOM
(2.89 KB, patch)
2012-08-14 10:43 PDT
,
Filip Spacek
staikos
: review+
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Fail gracefully in case of OOM
(2.89 KB, patch)
2012-08-14 13:16 PDT
,
Filip Spacek
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Filip Spacek
Comment 1
2012-08-14 10:43:22 PDT
Created
attachment 158367
[details]
Fail gracefully in case of OOM
WebKit Review Bot
Comment 2
2012-08-14 12:50:14 PDT
Comment on
attachment 158367
[details]
Fail gracefully in case of OOM Rejecting
attachment 158367
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/13500381
Filip Spacek
Comment 3
2012-08-14 13:16:00 PDT
Created
attachment 158402
[details]
Fail gracefully in case of OOM Now with OOPS!
WebKit Review Bot
Comment 4
2012-08-14 14:20:17 PDT
Comment on
attachment 158402
[details]
Fail gracefully in case of OOM Clearing flags on attachment: 158402 Committed
r125605
: <
http://trac.webkit.org/changeset/125605
>
WebKit Review Bot
Comment 5
2012-08-14 14:20:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug