[BlackBerry] Don't crash on OOM in AC https://bugs.webkit.org/show_bug.cgi?id=93999

Patch by Filip Spacek <fspacek@rim.com> on 2012-08-14
Reviewed by George Staikos.

Internally reviewed by George Staikos.

Fail gracefully in case we fail to allocate the bitmap
for the AC layer contents.

* platform/graphics/blackberry/InstrumentedPlatformCanvas.h:
(WebCore::InstrumentedPlatformCanvas::InstrumentedPlatformCanvas):
* platform/graphics/blackberry/LayerWebKitThread.cpp:
(WebCore::LayerWebKitThread::paintContents):

Canonical link: https://commits.webkit.org/111872@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125605 268f45cc-cd09-0410-ab3c-d52691b4dbfc